--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header>
+
+    </header>
     
+    <main>
+        <section>
+            <div class="top-player">
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3>player-1</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3>player-2</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3>player-3</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3>player-4</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3>player-5</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3>player-6</h3>
+                    </div>
+                </div>
+            </div>
+        </section>   
+    </main>
 </body>
 </html>
