--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <script src="https://kit.fontawesome.com/e7dfb3294a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -13,36 +14,160 @@
     </header>
     
     <main>
-        <section>
+        <section class="container">
             <div class="top-player">
+                <h2 class="title">Top Players</h2>
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
-                        <h3>player-1</h3>
+                        <h3 class="player-name" >John Smith</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
-                        <h3>player-2</h3>
+                        <h3 class="player-name">Pro Rasel</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png" alt="">
-                        <h3>player-3</h3>
+                        <h3 class="player-name">Abu Sufian</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png" alt="">
-                        <h3>player-4</h3>
+                        <h3 class="player-name">Shajedul Karim</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3>player-5</h3>
+                        <h3 class="player-name">Maruf Ahmed</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3>player-6</h3>
+                        <h3 class="player-name">Mujahid Hossain</h3>
                     </div>
                 </div>
             </div>
-        </section>   
+            <hr>
+            <div class="top-blogs">
+                <h2 class="title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favourite UI/UX Goodies</h3>
+                            <p class="blog-author">by <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">UI Cheat Sheet: List vs Grids</h3>
+                            <p class="blog-author">by <a href="">Tess Gadd</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">7 Typography Tips for Interface Design</h3>
+                            <p class="blog-author">by <a href="">Jeremiah Lam</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">Your Logo is Copied</h3>
+                            <p class="blog-author">by <a href="">Fardinend Vogler</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        
+        <section class="container down-scale">
+            <h2 class="title">Latest Courses</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail scaling">
+                        <h3 class="course-title">React - the Complete Guide 2022</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info scaling">
+                        <div class="ratings">
+                            <i class="fas fa-star field-star"></i>
+                            <i class="fas fa-star field-star"></i>
+                            <i class="fas fa-star field-star"></i>
+                            <i class="fas fa-star field-star"></i>
+                            <i class="fas fa-star blank-star"></i>
+                        </div>
+                        <p class="rate-number">4.5</p>
+                        <div class="duration">
+                            <div class="duration-time">
+                                <i class="far fa-clock"></i>
+                                1.30 hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail scaling">
+                        <h3 class="course-title">Powerpoint 2022 Master Powerpoint Course</h3>
+                        <p class="course-author">Walter Scott.</p>
+                    </div>
+                    <div class="course-info scaling">
+                        <div class="ratings">
+                            <i class="fas fa-star field-star"></i>
+                            <i class="fas fa-star field-star"></i>
+                            <i class="fas fa-star field-star"></i>
+                            <i class="fas fa-star field-star"></i>
+                            <i class="fas fa-star blank-star"></i>
+                        </div>
+                        <p class="rate-number">4.3</p>
+                        <div class="duration">
+                            <div class="duration-time">
+                                <i class="far fa-clock"></i>
+                                1.20 hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail scaling">
+                        <h3 class="course-title">The Complete JavaScript Course 2022</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info scaling">
+                        <div class="ratings">
+                            <i class="fas fa-star field-star"></i>
+                            <i class="fas fa-star field-star"></i>
+                            <i class="fas fa-star field-star"></i>
+                            <i class="fas fa-star field-star"></i>
+                            <i class="fas fa-star blank-star"></i>
+                        </div>
+                        <p class="rate-number">4.5</p>
+                        <div class="duration">
+                            <div class="duration-time">
+                                <i class="far fa-clock"></i>
+                                1.30 hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
