--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-
+    <header class="head-bar">
+        <div class="left">
+            <div class="logo">
+                <img src="images/icons/logo.png" alt="">
+            </div>
+        <div class="logo-title">
+                <p>Idea<p>
+        </div>
+        </div>
+       <div class="right">
+        <div class="nav-topic">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Works</a>
+    </div>
+    <div class="profile">
+           <img src="images/icons/profile.png" alt="">
+    </div>
+       </div>
     </header>
     
     <main>
