--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <section class="container">
             <div class="top-player">
-                <h2 class="title">Top Players</h2>
+                <h2 id='top-player-title' class="title">Top Players</h2>
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
@@ -63,7 +63,7 @@
             </div>
             <hr>
             <div class="top-blogs">
-                <h2 class="title">Top Blogs</h2>
+                <h2 id='top-blog-title' class="title">Top Blogs</h2>
                 <div class="blogs">
                     <article class="blog">
                         <div class="thumbnail">
@@ -186,5 +186,26 @@
             </div>
         </section>
     </main>
+    <section>
+        <section class="ul-container">
+            <div>
+                <h3>Course no</h3>
+            <ul id="course-container">
+                <li>Course - 1</li>
+                <li>Course - 2</li>
+                <li>Course - 3</li>
+            </ul>
+            <input id="add-course" type="text" placeholder="Add a course">
+            <br>
+            <button id="click-btn" class="button">Click to add</button>
+            </div>
+            <div>
+                <input type="text" text=0>
+                <button>+</button>
+            </div>
+        </section>
+    </section>
+    
+    <script src="app.js"></script>
 </body>
 </html>
